fixed upload page bottom section spacing

--- a/react-app/src/components/CreatePostPage/CreatePostPage.css
+++ b/react-app/src/components/CreatePostPage/CreatePostPage.css
@@ -1,5 +1,5 @@
 #post-upload {
-    height: 700px;
+    height: 800px;
     width: 600px;
     margin: 100px auto;
 }
